// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cascader Cascader baseVue demo works fine 1`] = `
<div>
  
  <div
    class="t-cascader t-size-m t-cascader__popup t-cascader__popup"
  >
    <span
      class="t-cascader__placeholder"
    >
      请选择
    </span>
    <svg
      class="t-fake-arrow t-cascader__icon"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
        stroke="black"
        stroke-opacity="0.9"
        stroke-width="1.3"
      />
    </svg>
  </div>
  <!---->
  
</div>
`;

exports[`Cascader Cascader checkStrictlyVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-row t-cascader-demo"
>
  
  <div
    class="t-cascader t-size-m t-cascader__popup t-cascader__popup"
  >
    <span
      class="t-cascader__placeholder"
    >
      请选择
    </span>
    <svg
      class="t-fake-arrow t-cascader__icon"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
        stroke="black"
        stroke-opacity="0.9"
        stroke-width="1.3"
      />
    </svg>
  </div>
  <!---->
  
  
  <div
    class="t-cascader t-size-m t-cascader--multiple t-cascader__popup t-cascader__popup"
  >
    <span
      class="t-cascader__placeholder"
    >
      请选择
    </span>
    <svg
      class="t-fake-arrow t-cascader__icon"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
        stroke="black"
        stroke-opacity="0.9"
        stroke-width="1.3"
      />
    </svg>
  </div>
  <!---->
  
</div>
`;

exports[`Cascader Cascader collapsedVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-row"
>
  
  <div
    class="t-cascader t-size-m t-cascader--multiple t-cascader__popup t-cascader__popup"
  >
    <span
      class="t-cascader__placeholder"
    >
      请选择
    </span>
    <svg
      class="t-fake-arrow t-cascader__icon"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
        stroke="black"
        stroke-opacity="0.9"
        stroke-width="1.3"
      />
    </svg>
  </div>
  <!---->
  
  
  <div
    class="t-cascader t-size-m t-cascader--multiple t-cascader__popup t-cascader__popup"
  >
    <span
      class="t-cascader__placeholder"
    >
      请选择
    </span>
    <svg
      class="t-fake-arrow t-cascader__icon"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
        stroke="black"
        stroke-opacity="0.9"
        stroke-width="1.3"
      />
    </svg>
  </div>
  <!---->
  
  
  <div
    class="t-cascader t-size-m t-cascader--multiple t-demo-cascader t-cascader__popup t-demo-cascader t-demo-cascader t-cascader__popup t-demo-cascader"
  >
    <span
      class="t-cascader__placeholder"
    >
      请选择
    </span>
    <svg
      class="t-fake-arrow t-cascader__icon"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
        stroke="black"
        stroke-opacity="0.9"
        stroke-width="1.3"
      />
    </svg>
  </div>
  <!---->
  
</div>
`;

exports[`Cascader Cascader disabledVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-row"
>
  
  <div
    class="t-cascader t-size-m t-is-disabled t-cascader__popup t-cascader__popup"
  >
    <span
      class="t-cascader__placeholder"
    >
      请选择
    </span>
    <svg
      class="t-fake-arrow t-cascader__icon t-is-disabled"
      disabled="true"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
        stroke="black"
        stroke-opacity="0.9"
        stroke-width="1.3"
      />
    </svg>
  </div>
  <!---->
  
  
  <div
    class="t-cascader t-size-m t-is-disabled t-cascader--multiple t-cascader__popup t-cascader__popup"
  >
    <span
      class="t-cascader__placeholder"
    >
      请选择
    </span>
    <svg
      class="t-fake-arrow t-cascader__icon t-is-disabled"
      disabled="true"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
        stroke="black"
        stroke-opacity="0.9"
        stroke-width="1.3"
      />
    </svg>
  </div>
  <!---->
  
</div>
`;

exports[`Cascader Cascader ellipsisVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-row t-cascader-demo"
>
  
  <div
    class="t-cascader t-size-m t-cascader__popup t-cascader__popup"
  >
    <span
      class="t-cascader__placeholder"
    >
      请选择
    </span>
    <svg
      class="t-fake-arrow t-cascader__icon"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
        stroke="black"
        stroke-opacity="0.9"
        stroke-width="1.3"
      />
    </svg>
  </div>
  <!---->
  
  
  <div
    class="t-cascader t-size-m t-cascader--multiple t-cascader__popup t-cascader__popup"
  >
    <span
      class="t-cascader__placeholder"
    >
      请选择
    </span>
    <svg
      class="t-fake-arrow t-cascader__icon"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
        stroke="black"
        stroke-opacity="0.9"
        stroke-width="1.3"
      />
    </svg>
  </div>
  <!---->
  
</div>
`;

exports[`Cascader Cascader filterableVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-row"
>
  
  <div
    class="t-cascader t-size-m t-cascader__popup t-cascader__popup"
  >
    <span
      class="t-cascader__placeholder"
    >
      请选择
    </span>
    <svg
      class="t-fake-arrow t-cascader__icon"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
        stroke="black"
        stroke-opacity="0.9"
        stroke-width="1.3"
      />
    </svg>
  </div>
  <!---->
  
  
  <div
    class="t-cascader t-size-m t-cascader--multiple t-cascader__popup t-cascader__popup"
  >
    <span
      class="t-cascader__placeholder"
    >
      请选择
    </span>
    <svg
      class="t-fake-arrow t-cascader__icon"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
        stroke="black"
        stroke-opacity="0.9"
        stroke-width="1.3"
      />
    </svg>
  </div>
  <!---->
  
</div>
`;

exports[`Cascader Cascader keysVue demo works fine 1`] = `
<div>
  
  <div
    class="t-cascader t-size-m t-cascader__popup t-cascader__popup"
  >
    <span
      class="t-cascader__placeholder"
    >
      请选择
    </span>
    <svg
      class="t-fake-arrow t-cascader__icon"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
        stroke="black"
        stroke-opacity="0.9"
        stroke-width="1.3"
      />
    </svg>
  </div>
  <!---->
  
</div>
`;

exports[`Cascader Cascader loadVue demo works fine 1`] = `
<div>
  
  <div
    class="t-cascader t-size-m t-cascader__popup t-cascader__popup"
  >
    <span
      class="t-cascader__placeholder"
    >
      请选择
    </span>
    <svg
      class="t-fake-arrow t-cascader__icon"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
        stroke="black"
        stroke-opacity="0.9"
        stroke-width="1.3"
      />
    </svg>
  </div>
  <!---->
  
</div>
`;

exports[`Cascader Cascader maxVue demo works fine 1`] = `
<div>
  
  <div
    class="t-cascader t-size-m t-cascader--multiple t-cascader__popup t-cascader__popup"
  >
    <span
      class="t-cascader__placeholder"
    >
      请选择
    </span>
    <svg
      class="t-fake-arrow t-cascader__icon"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
        stroke="black"
        stroke-opacity="0.9"
        stroke-width="1.3"
      />
    </svg>
  </div>
  <!---->
  
</div>
`;

exports[`Cascader Cascader multipleVue demo works fine 1`] = `
<div
  class="t-cascader-demo"
>
  
  <div
    class="t-cascader t-size-m t-cascader--multiple t-cascader__popup t-cascader__popup"
  >
    <span
      class="t-cascader__placeholder"
    >
      请选择
    </span>
    <svg
      class="t-fake-arrow t-cascader__icon"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
        stroke="black"
        stroke-opacity="0.9"
        stroke-width="1.3"
      />
    </svg>
  </div>
  <!---->
  
</div>
`;

exports[`Cascader Cascader showAllLevelsVue demo works fine 1`] = `
<div>
  
  <div
    class="t-cascader t-size-m t-cascader__popup t-cascader__popup"
  >
    <span
      class="t-cascader__placeholder"
    >
      请选择
    </span>
    <svg
      class="t-fake-arrow t-cascader__icon"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
        stroke="black"
        stroke-opacity="0.9"
        stroke-width="1.3"
      />
    </svg>
  </div>
  <!---->
  
</div>
`;

exports[`Cascader Cascader sizeVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-row"
>
  <!-- 非受控用法 -->
  
  <div
    class="t-cascader t-size-s t-cascader__popup t-cascader__popup"
  >
    <span
      class="t-cascader__placeholder"
    >
      请选择
    </span>
    <svg
      class="t-fake-arrow t-cascader__icon"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
        stroke="black"
        stroke-opacity="0.9"
        stroke-width="1.3"
      />
    </svg>
  </div>
  <!---->
  
  <!-- 受控+语法糖用法 -->
  
  <div
    class="t-cascader t-size-m t-cascader__popup t-cascader__popup"
  >
    <span
      class="t-cascader__placeholder"
    >
      请选择
    </span>
    <svg
      class="t-fake-arrow t-cascader__icon"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
        stroke="black"
        stroke-opacity="0.9"
        stroke-width="1.3"
      />
    </svg>
  </div>
  <!---->
  
  <!-- 受控用法 -->
  
  <div
    class="t-cascader t-size-l t-cascader__popup t-cascader__popup"
  >
    <span
      class="t-cascader__placeholder"
    >
      请选择
    </span>
    <svg
      class="t-fake-arrow t-cascader__icon"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
        stroke="black"
        stroke-opacity="0.9"
        stroke-width="1.3"
      />
    </svg>
  </div>
  <!---->
  
</div>
`;

exports[`Cascader Cascader triggerVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-row"
>
  
  <div
    class="t-cascader t-size-m t-cascader__popup t-cascader__popup"
  >
    <span
      class="t-cascader__placeholder"
    >
      请选择
    </span>
    <svg
      class="t-fake-arrow t-cascader__icon"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
        stroke="black"
        stroke-opacity="0.9"
        stroke-width="1.3"
      />
    </svg>
  </div>
  <!---->
  
  
  <div
    class="t-cascader t-size-m t-cascader__popup t-cascader__popup"
  >
    <span
      class="t-cascader__placeholder"
    >
      请选择
    </span>
    <svg
      class="t-fake-arrow t-cascader__icon"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
        stroke="black"
        stroke-opacity="0.9"
        stroke-width="1.3"
      />
    </svg>
  </div>
  <!---->
  
</div>
`;

exports[`Cascader Cascader valueModeVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-row"
>
  
  <div
    class="t-cascader t-size-m t-cascader--multiple t-cascader__popup t-cascader__popup"
  >
    <span
      class="t-cascader__placeholder"
    >
      请选择
    </span>
    <svg
      class="t-fake-arrow t-cascader__icon"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
        stroke="black"
        stroke-opacity="0.9"
        stroke-width="1.3"
      />
    </svg>
  </div>
  <!---->
  
  
  <div
    class="t-cascader t-size-m t-cascader--multiple t-cascader__popup t-cascader__popup"
  >
    <span
      class="t-cascader__placeholder"
    >
      请选择
    </span>
    <svg
      class="t-fake-arrow t-cascader__icon"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
        stroke="black"
        stroke-opacity="0.9"
        stroke-width="1.3"
      />
    </svg>
  </div>
  <!---->
  
  
  <div
    class="t-cascader t-size-m t-cascader--multiple t-cascader__popup t-cascader__popup"
  >
    <span
      class="t-cascader__placeholder"
    >
      请选择
    </span>
    <svg
      class="t-fake-arrow t-cascader__icon"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
        stroke="black"
        stroke-opacity="0.9"
        stroke-width="1.3"
      />
    </svg>
  </div>
  <!---->
  
</div>
`;

exports[`Cascader Cascader valueTypeVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-row"
>
  
  <div
    class="t-cascader t-size-m t-cascader__popup t-cascader__popup"
  >
    <span
      class="t-cascader__placeholder"
    >
      请选择
    </span>
    <svg
      class="t-fake-arrow t-cascader__icon"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
        stroke="black"
        stroke-opacity="0.9"
        stroke-width="1.3"
      />
    </svg>
  </div>
  <!---->
  
  
  <div
    class="t-cascader t-size-m t-cascader--multiple t-cascader__popup t-cascader__popup"
  >
    <span
      class="t-cascader__placeholder"
    >
      请选择
    </span>
    <svg
      class="t-fake-arrow t-cascader__icon"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
        stroke="black"
        stroke-opacity="0.9"
        stroke-width="1.3"
      />
    </svg>
  </div>
  <!---->
  
</div>
`;
